--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -757,6 +757,9 @@ en:
         restrict_dependent_destroy:
           has_many: Cannot delete record because dependent %{record} exist
           has_one: Cannot delete record because a dependent %{record} exists
+      models:
+        impound_record:
+          user_not_authorized: does not have permission to impound this bike
     models:
       ad: Ad
       ambassador: Ambassador
@@ -1655,7 +1658,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -1681,7 +1684,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
