--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1295,6 +1295,7 @@ en:
       at: at
       bike_in_admin: "%{bike_type} in Admin"
       bike_photo: "%{bike_type} photo"
+      change_the_bike_sticker_linked_to: Change the bike it links to
       color_may_not_match: Color may not match!
       componentcmodel_name: "%{componentcmodel_name}"
       componentyear: "%{componentyear}"
@@ -1311,6 +1312,7 @@ en:
       front_wheel_diameter: Front wheel diameter
       handlebar_type: Handlebar type
       hidden_by_owner: HIDDEN by owner
+      is_this_linked_to_incorrect_bike: Is this sticker linked to the incorrect bike?
       is_this_your_bike_send_proof_of_ownership: >-
         Is this your bike? Send proof of ownership (such as the bike's serial number
         or a link to a photo of you with the bike)
@@ -1339,7 +1341,9 @@ en:
       spread_the_word: Spread the word!
       stock_photo: Stock photo of a %{year} %{model}
       stolen: Stolen
+      switch_to_new_bike_id: Switch to a new bike ID
       theft_details: "%{bike_recovered} Details"
+      update: Update
       view_users_other_registrations: View user's other registrations
       wheel_diameter: Wheel diameter
       where_did_you_see_this_bike: >-
@@ -1347,6 +1351,9 @@ en:
         found online, include a link in the field below
       write_them_a_message: Write them a message
       year: Year
+      you_scanned_this_sticker_html: >-
+        You scanned the sticker <strong>%{pretty_code}</strong> which is assigned
+        to this %{bike_type}.
     stolen_checklist:
       a_photo_of_your_bike_type: a photo of your %{bike_type}
       a_police_report: a Police Report Number
