show language selection to everyone

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3939,6 +3939,7 @@ en:
       bike_manufacturer_list: Bike Manufacturer List
       bike_shops: Bike Shops
       blog: Blog
+      change_preferred_language: change preferred language
       cities: Cities
       community_groups: Community Groups
       copyright_html: "%{current_year} &copy; Bike Index, a 501(c)(3) nonprofit -
