--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3058,7 +3058,7 @@ en:
       please_fix_the_following: Please fix the following %{errors}
   locales:
     en: English
-    nl: Dutch
+    nl: Dutch (Nederlands)
   meta_descriptions:
     bikes_index: Search for bikes that have been registered on Bike Index
     bikes_new: >-
